# car-maintenance-app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
agent/: obd_agent.py
app/: main.py
app/core/: config.py  dependencies.py  security.py  thresholds.py
app/crud/: alert.py  car.py  device.py  maintenance_record.py  telemetry_log.py  user.py
app/db/: database.py  session.py
app/ml/: model.pkl  predict.py  train.py
app/models/: alert.py  car.py  device.py  maintenance_record.py  telemetry_log.py  user.py
app/routes/: alerts.py  auth.py  cars.py  devices.py  maintenance_records.py  telemetry_logs.py
app/schemas/: alert.py  car.py  device.py  maintenance_record.py  telemetry_log.py  user.py
app/services/: alert_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: alerts.ts  auth.ts  cars.ts  client.ts  devices.ts  maintenance.ts  telemetry.ts
frontend/src/components/: AddDeviceModal.tsx  AddMaintenanceModal.tsx  CarEditModal.tsx  (+10 more)
migrations/: env.py
migrations/versions/: 025111b41382_add_device_token_hash.py  0db48da12991_add_car_body_type_fuel_type_.py  401ca60eef58_relationships_ondelete_cascade_car_user_.py  411173f32a8a_add_alerts_table.py  7b0bfa075d87_initial_schema.py  86f9a651b606_add_car_brake_condition_owner_type.py  a9dec335c2fe_add_user_id_and_risk_score_to_cars.py  af2d17c56788_telemetry_add_speed_and_engine_load.py  ddb88ce0d21a_alert_add_resolved_at_and_composite_.py  fec1d6cad09c_baseline_schema.py
tools/: simulate_telemetry.py
(+8 files in other folders)
