[project]
name = "car-maintenance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4.0",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "obd>=0.7.3",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
